--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    >
 
-    <TextView
-
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View" />
+   <LinearLayout
+       android:layout_weight="1.5"
+       android:background="#000000"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"/>
+    <LinearLayout
+        android:layout_weight="1.5"
+        android:background="#f20"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
+    <LinearLayout
+        android:layout_weight="1.5"
+        android:background="#FFDD00"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
 
 </LinearLayout>
