--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,91 @@
 
    <LinearLayout
        android:layout_weight="1.5"
-       android:background="#000000"
+
        android:layout_width="match_parent"
-       android:layout_height="0dp"/>
+       android:layout_height="0dp"
+       android:orientation="vertical">
+       <TextView
+           android:layout_weight="1.5"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:text="A"
+           android:background="#B300FF"
+           android:gravity="center"
+           android:textSize="30sp"
+           />
+       <TextView
+           android:layout_weight="1.5"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:text="A"
+           android:background="#F6F5F5"
+           android:gravity="center"
+           android:textSize="30sp"
+           />
+       <TextView
+           android:layout_weight="1.5"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:text="A"
+           android:background="#0037FF"
+           android:gravity="center"
+           android:textSize="30sp"
+           />
+       <TextView
+           android:layout_weight="1.5"
+           android:layout_width="match_parent"
+           android:layout_height="0dp"
+           android:text="A"
+           android:background="#2FFF00"
+           android:gravity="center"
+           android:textSize="30sp"
+           />
+
+   </LinearLayout>
     <LinearLayout
         android:layout_weight="1.5"
-        android:background="#f20"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
-    <LinearLayout
-        android:layout_weight="1.5"
-        android:background="#FFDD00"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        >
+        <TextView
+            android:layout_weight="1.5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="A"
+            android:background="#B300FF"
+            android:gravity="center"
+            android:textSize="30sp"
+            />
+        <TextView
+            android:layout_weight="1.5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="A"
+            android:background="#F6F5F5"
+            android:gravity="center"
+            android:textSize="30sp"
+            />
+        <TextView
+            android:layout_weight="1.5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="A"
+            android:background="#0037FF"
+            android:gravity="center"
+            android:textSize="30sp"
+            />
+        <TextView
+            android:layout_weight="1.5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="A"
+            android:background="#2FFF00"
+            android:gravity="center"
+            android:textSize="30sp"
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
