--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,97 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:orientation="vertical"
-    >
-   <LinearLayout
-       android:layout_weight="1.5"
+    android:weightSum="7"
+    tools:context=".MainActivity">
 
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:orientation="vertical">
-       <TextView
-           android:layout_weight="1.5"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:text="A"
-           android:background="#B300FF"
-           android:gravity="center"
-           android:textSize="30sp"
-           />
-       <TextView
-           android:layout_weight="1.5"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:text="B"
-           android:background="#F6F5F5"
-           android:gravity="center"
-           android:textSize="30sp"
-           />
-       <TextView
-           android:layout_weight="1.5"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:text="C"
-           android:background="#0037FF"
-           android:gravity="center"
-           android:textSize="30sp"
-           />
-       <TextView
-           android:layout_weight="1.5"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:text="D"
-           android:background="#2FFF00"
-           android:gravity="center"
-           android:textSize="30sp"
-           />
-   </LinearLayout>
     <LinearLayout
-        android:layout_weight="1.5"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
+
         android:layout_height="0dp"
-        >
+        android:layout_weight="2"
+        android:orientation="vertical">
+
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1.5"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="A"
             android:background="#B300FF"
             android:gravity="center"
-            android:textSize="30sp"
-            />
+            android:text="A"
+            android:textSize="30sp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:orientation="horizontal"
+        android:weightSum="7"
+
+        >
+
         <TextView
-            android:layout_weight="1.5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="#f20"
+            android:gravity="center"
             android:text="B"
-            android:background="#F6F5F5"
-            android:gravity="center"
-            android:textSize="30sp"
-            />
-        <TextView
-            android:layout_weight="1.5"
+            android:textSize="30sp" />
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="C"
-            android:background="#0037FF"
-            android:gravity="center"
-            android:textSize="30sp"
-            />
-        <TextView
-            android:layout_weight="1.5"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="D"
-            android:background="#2FFF00"
-            android:gravity="center"
-            android:textSize="30sp"
-            />
+            android:layout_weight="5"
+            android:orientation="vertical"
+            android:weightSum="7">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:text="C"
+                android:textSize="30sp" />
+            <LinearLayout
+                android:layout_weight="2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="horizontal">
+                <TextView
+
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:background="@color/colorPrimaryDark"
+                    android:gravity="center"
+                    android:text="D"
+                    android:textSize="30sp" />
+                <TextView
+
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:text="E"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
