--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="7"
+    android:weightSum="10"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-
+android:weightSum="10"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
             android:background="#B300FF"
             android:gravity="center"
             android:text="A"
+            android:textSize="30sp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:background="#C8FF00"
+            android:gravity="center"
+            android:text="B"
             android:textSize="30sp" />
 
 
@@ -30,27 +38,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="6"
         android:orientation="horizontal"
         android:weightSum="7"
 
         >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="#f20"
-            android:gravity="center"
-            android:text="B"
-            android:textSize="30sp" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
             android:orientation="vertical"
-            android:weightSum="7">
+            android:weightSum="10">
 
             <TextView
                 android:layout_width="match_parent"
@@ -60,31 +59,48 @@
                 android:gravity="center"
                 android:text="C"
                 android:textSize="30sp" />
-            <LinearLayout
-                android:layout_weight="2"
+
+            <TextView
+
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:orientation="horizontal">
-                <TextView
-
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="5"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="D"
-                    android:textSize="30sp" />
-                <TextView
-
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="5"
-                    android:background="@color/colorPrimary"
-                    android:gravity="center"
-                    android:text="E"
-                    android:textSize="30sp" />
-            </LinearLayout>
+                android:layout_weight="5"
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:text="D"
+                android:textSize="30sp" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="#f20"
+            android:gravity="center"
+            android:text="E"
+            android:textSize="30sp" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="#D8D1CF"
+            android:gravity="center"
+            android:text="E"
+            android:textSize="30sp" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="#8E7763"
+            android:gravity="center"
+            android:text="F"
+            android:textSize="30sp" />
 </LinearLayout>
