--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:weightSum="10"
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-android:weightSum="10"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+
+        android:layout_height="match_parent"
+        android:layout_weight="2.5"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2.5"
             android:background="#B300FF"
             android:gravity="center"
             android:text="A"
             android:textSize="30sp" />
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:background="#C8FF00"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2.5"
+            android:background="#C69BD8"
             android:gravity="center"
             android:text="B"
             android:textSize="30sp" />
@@ -36,71 +36,97 @@ android:weightSum="10"
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6"
-        android:orientation="horizontal"
-        android:weightSum="7"
-
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="7.5"
+        android:orientation="vertical"
         >
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
             android:layout_weight="5"
-            android:orientation="vertical"
-            android:weightSum="10">
-
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
-                android:background="@color/colorAccent"
+                android:layout_weight="2.5"
+                android:background="#88768F"
                 android:gravity="center"
                 android:text="C"
                 android:textSize="30sp" />
-
             <TextView
-
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
-                android:background="@color/colorPrimaryDark"
+                android:layout_weight="2.5"
+                android:background="#2C875B"
                 android:gravity="center"
                 android:text="D"
                 android:textSize="30sp" />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2.5"
+                    android:background="#40A5B8"
+                    android:gravity="center"
+                    android:text="E"
+                    android:textSize="30sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2.5"
+                    android:background="#C82063"
+                    android:gravity="center"
+                    android:text="F"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2.5"
+                    android:background="#3DF161"
+                    android:gravity="center"
+                    android:text="G"
+                    android:textSize="30sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2.5"
+                    android:background="#543760"
+                    android:gravity="center"
+                    android:text="H"
+                    android:textSize="30sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2.5"
+                    android:background="#DFAD55"
+                    android:gravity="center"
+                    android:text="I"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="#f20"
-            android:gravity="center"
-            android:text="E"
-            android:textSize="30sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
 
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="#D8D1CF"
-            android:gravity="center"
-            android:text="E"
-            android:textSize="30sp" />
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="#8E7763"
-            android:gravity="center"
-            android:text="F"
-            android:textSize="30sp" />
-</LinearLayout>
+    </LinearLayout>
+    </LinearLayout></LinearLayout>
